fix overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -202,7 +202,7 @@ input:focus {
 	flex-direction: row;
 	gap: 0;
 	align-items: start;
-	justify-content: start;
+	justify-content: start;overflow-y: hidden;
 }
 .sideBar {
 	font-family: "PT Sans";
